--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,42 +1,19 @@
 name: CI/CD Pipeline
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-        
-    - name: Build with Maven
-      run: mvn clean install
-
-    - name: Run Tests
-      run: mvn test
-
-    - name: Build Docker Image
-      run: docker build -t cidade-inteligente-app .
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
-    - name: Deploy to Azure
-      run: |
-        az webapp deploy --name cidade-inteligente-app --image cidade-inteligente-app
+    job1-hello:
+       runs-on: ubuntu-latest
+       steps:
+         - name: imprimir mensagem
+           run: echo "olá, Mundo"
+    job2-goodbye:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Step 1 - Sequencia de instruções
+            run: |
+              echo "uma nova instrução"
+              ls
+          - name: Step 2 - Imprimir mensagem
+            run: echo "Até logo!"
