--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,19 +1,46 @@
-name: CI/CD Pipeline
-
-on: push
-
+on:
+    push:
+        branches: 
+        - "feature/ci-cd"
+ 
+env:
+  IMAGE_NAME: spring-boot-app
+  AZURE_WEBAPP_NAME: demo-cidade-inteligente
+ 
 jobs:
-    job1-hello:
-       runs-on: ubuntu-latest
-       steps:
-         - name: imprimir mensagem
-           run: echo "olá, Mundo"
-    job2-goodbye:
+    build:
         runs-on: ubuntu-latest
+        steps:             
+        -  
+            name: Git Checkout 
+            uses: actions/checkout@v4 
+ 
+        -   name: Setup Java SDK 
+            uses: actions/setup-java@v4 
+            with: 
+              distribution: 'temurin'  
+              java-version: '21'
+        -
+            name: Login to Docker Hub
+            uses: docker/login-action@v3
+            with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+        - 
+            name: Build 
+            uses: docker/build-push-action@v6 
+            with: 
+                push: true
+                tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
         steps:
-          - name: Step 1 - Sequencia de instruções
-            run: |
-              echo "uma nova instrução"
-              ls
-          - name: Step 2 - Imprimir mensagem
-            run: echo "Até logo!"
+        - 
+            name: Deploy to Azure Web App
+            id: deploy-to-webapp
+            uses: azure/webapps-deploy@v2
+            with:
+              app-name: ${{ env.AZURE_WEBAPP_NAME }}
+              publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+              images: 'ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest'
